# kinda-lang

./: .gitignore  =5.8.0  BOB_HANDOFF_v0.5.0.md  BUG_REPORT_ish_infinite_loop.md  BUG_REPORT_welp_transformer.md  CHANGELOG.md  CI_DEADLOCK_FIX_SUMMARY.md  CLAUDE.md  ENTERPRISE.md  EPIC_126_TASK_1_DESIGN.md  EPIC_126_TASK_1_IMPLEMENTATION_SUMMARY.md  EPIC_127_MIGRATION_STRATEGY_SPEC.md  EPIC_127_PHASE1_ARCHITECTURE_SUMMARY.md  EPIC_127_PHASE1_COMPLETION_REPORT.md  EPIC_127_PHASE1_HANDOFF_REPORT.md  EPIC_127_PHASE1_TEST_FAILURE_ANALYSIS.md  EPIC_127_PHASE3_VALIDATION_REPORT.md  EPIC_127_PHASE_1_FAILURE_ANALYSIS.md  EPIC_127_PROBABILITY_CONTROL_SPEC.md  EPIC_127_PYTHON_ENHANCEMENT_BRIDGE_ARCHITECTURE.md  EPIC_127_TRANSPILER_INFRASTRUCTURE_SPEC.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-DUAL.md  Makefile  PERFORMANCE.md  PHASE_1_SUMMARY.md  PR_CREATION_INSTRUCTIONS.md  PR_TEMPLATE_v0.4.0.md  README.md  RECORD_REPLAY_PHASE1.md  RECORD_REPLAY_PHASE2.md  ROADMAP.md  SECURITY.md  SETUP_PROGRESS.md  TESTER_HANDOFF_RECORD_REPLAY_ISSUES.md  TESTER_VALIDATION_REPORT.md  TESTER_VALIDATION_REPORT_EPIC_126_TASK_3.md  TESTER_VALIDATION_REPORT_EPIC_126_TASK_3_FINAL.md  audit_examples.py  (+29 more)
.claude/: PERFORMANCE_TESTS.md  README.md
.claude/agents/: kinda-architect.md  kinda-coder.md  kinda-pm.md  kinda-pr-reviewer.md  kinda-tester.md
.claude/ci/: smart-ci.sh
.claude/preflight/: validate.sh
.claude/sessions/: session-manager.sh
.claude/status/: show-workflow.sh  update-status.sh
.claude/workflows/: sync-session.sh
.github/: AGENT_WORKFLOW.md  CODEOWNERS  DUAL_EPIC_COORDINATION_STRATEGY.md  DUAL_EPIC_PRIORITIZATION_FRAMEWORK.md  EPIC_124_TASK_1.md  EPIC_124_TASK_2.md  EPIC_124_TASK_3.md  EPIC_124_TASK_4.md  EPIC_125_HANDOFF_SUMMARY.md  EPIC_125_PROBABILISTIC_CONTROL_FLOW.md  EPIC_125_TASK_1.md  EPIC_125_TASK_2.md  EPIC_125_TASK_3.md  EPIC_125_TASK_4.md  EPIC_127_PYTHON_INJECTION.md  EPIC_127_TASK_1.md  EPIC_127_TASK_2.md  EPIC_127_TASK_3.md  EPIC_127_TASK_4.md  PROJECT_STATE.md  TASK_1_CODER_ASSIGNMENT.md  pull_request_template.md
.github/workflows/: demo-validation.yml  docs.yml  main.yml
.mcp-server/: .env.example  README.md  SETUP.md  install.sh  mcp-agent-server.ts  package-lock.json  package.json  setup-claude-config.sh  setup-cli.sh  tsconfig.json
docs/: EPIC_127_DECISION_LOG.md  EPIC_127_OVERVIEW.md  EPIC_127_TEST_STATUS_REPORT.md  INTEGRATION_EPIC_124_125.md  LOOP_CONSTRUCTS.md  META_PROGRAMMING_TESTING.md  MIGRATION_GUIDE.md  PERFORMANCE_GUIDE.md  PROBABILISTIC_CONTROL_FLOW.md  PYTHON_INJECTION_ARCHITECTURE.md  PYTHON_INJECTION_CLI.md  PYTHON_INJECTION_IMPLEMENTATION.md  PYTHON_INJECTION_PATTERNS.md  QUICK_START_EPIC_125.md
docs/architecture/: ARCHITECTURE_SUMMARY_ISSUE_125.md  EPIC_127_DISABLED_TESTS_ARCHITECTURAL_ANALYSIS.md  README.md  adr-001-personality-driven-chaos.md  adr-002-runtime-code-generation.md  adr-003-inline-construct-transformation.md  c4-system-container.md  epic-126-task-3-architect-handoff.md  epic-126-task-3-ish-composition-design.md  performance-testing-framework-handoff.md  performance-testing-framework.md  sequence-construct-execution.md  sequence-transform-flow.md  statistical-testing-framework.md  user-documentation-architecture.md
docs/composition/: README.md  advanced-patterns.md  api-reference.md  best-practices.md  practical-implementation.md  theoretical-foundation.md
docs/handoffs/: architect-to-coder-handoff.md  architect-to-coder-issue-125.md
docs/source/: advanced_patterns.md  architecture.md  conf.py  contributing.md  dev.md  features.md  getting_started.md  index.md  index.rst  usage.md
docs/specifications/: EPIC_127_TEST_FIX_IMPLEMENTATION_SPEC.md  ci-integration-architecture.md  coder-implementation-specification.md  epic-126-task-3-implementation-spec.md  example-ecosystem-specification.md  performance-ci-strategy.md  performance-test-framework.md  release-documentation-framework.md  statistical-migration-plan.md  statistical-testing-implementation.md  user-experience-flow-specification.md
docs/syntax/: c.md  python.md
examples/: epic_127_example.py  hello.knda  ish_demo.knda
kinda/: __main__.py  cli.py  exceptions.py  personality.py  record_replay.py  run.py  security.py  transformer.py
scripts/: ci-full.sh  ci-requirements.md  gen_python_runtime.py  pre-commit-hook.sh  smoke-test.sh
tests/: conftest.py  kinda_test_framework.py  test_build_output.py  test_cli.py  test_codegen_python.py  test_error_handling.py  test_fuzzy_assignment.knda  test_fuzzy_declaration.knda  test_fuzzy_matching.py  test_installation.py  test_runner.py  test_sometimes_block.knda  test_transformer.py  test_transformer_regression.py
(+247 files in other folders)
