# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kinda"
version = "0.1.0"
description = "A chaotic language augmentation layer"
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
kinda = "kinda.cli:main"