# pyproject.toml

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kinda-lang"
version = "0.5.1"
description = "🤷 A programming language for people who aren't totally sure - install with pipx"
authors = [
    { name = "Kevin Mayhew", email = "kevin@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "astor>=0.8.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
keywords = ["programming-language", "fuzzy-logic", "chaos", "humor", "transpiler", "cli-tool", "pipx"]

[project.urls]
Homepage = "https://github.com/kmayhew2020/kinda-lang"
Repository = "https://github.com/kmayhew2020/kinda-lang.git"
Issues = "https://github.com/kmayhew2020/kinda-lang/issues"

[project.scripts]
kinda = "kinda.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "mypy>=0.910",
    "psutil>=5.8.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "performance: marks tests as performance tests",
    "slow: marks tests as slow running tests",
    "ci_unstable: marks tests as potentially unstable in CI environments",
    "integration: marks tests as integration tests"
]
addopts = [
    "--strict-markers",
    "--tb=short"
]

# Performance testing configuration
[tool.performance-testing]
cache_directory = ".performance-cache"
baseline_retention_days = 30
confidence_level = 0.95
default_iterations = 100
ci_timeout_multiplier = 2.0
platforms = ["linux", "darwin", "windows"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.setuptools]
packages = ["kinda", "kinda.grammar", "kinda.grammar.python", "kinda.grammar.c", "kinda.interpreter", "kinda.langs", "kinda.langs.python", "kinda.testing"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
exclude = ["build/", "kinda/langs/python/runtime/fuzzy.py"]